# agentsight

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  build.rs  deny.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
config/: default_pricing.toml
docs/: actionable-decisions.md
reviews/: deep-review-full-project-2026-05-07.md
src/: aggregation.rs  lib.rs  main.rs
src/commands/: dashboard.rs  diagnose.rs  health.rs  install_skill.rs  mod.rs  sanitize.rs  session.rs  sessions.rs  summary.rs  timeline.rs  watch.rs
src/commands/diagnose/: benchmark.rs  cache.rs  claude_md.rs  clear_advisor.rs  cli.rs  context.rs  errors.rs  mod.rs  models.rs  patterns.rs  recommendations.rs  render.rs  test_helpers.rs  trend.rs  types.rs
src/config/: mod.rs
src/cost/: calculator.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
src/parser/: mod.rs  reader.rs  session_index.rs  types.rs
src/sanitize/: content.rs  mod.rs  paths.rs
src/server/: cache.rs  handlers.rs  mod.rs  sse.rs  state.rs  watcher.rs
src/skills/: agentsight_diagnose.md  mod.rs
static/: index.html
static/css/: style.css
static/js/: app.js  charts.js  utils.js
tests/: api_integration.rs  cli_integration.rs  diagnose_fixtures.rs  health_check.rs  model_compare.rs  parse_fixtures.rs
tests/fixtures/: bash_heavy.jsonl  cache_churning.jsonl  empty_session.jsonl  error_heavy.jsonl  large_session.jsonl  malformed.jsonl  multi_model.jsonl  normal_mixed_tools.jsonl  short_session.jsonl  sidechain.jsonl
