[package]
name = "agentsight"
version = "0.1.0"
edition = "2021"
description = "Token attribution and session intelligence for Claude Code"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crossterm = "0.28"
dirs = "6"
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
