[package]
name = "agentsight"
version = "0.1.0"
edition = "2021"
description = "Token attribution and session intelligence for Claude Code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RealNerd/agentsight"
homepage = "https://github.com/RealNerd/agentsight"
readme = "README.md"
keywords = ["claude", "tokens", "analytics", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crossterm = "0.28"
dirs = "6"
mime_guess = "2"
notify = "7"
open = "5"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "signal", "sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
